--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "umi dev",
+    "build": "umi build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
