--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "umi": "^2.8.18"
+    "umi": "^2.8.18",
+    "umi-plugin-react": "^1.9.17"
   }
 }
