--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "umi": "^2.8.18",
     "umi-plugin-react": "^1.9.17"
+  },
+  "dependencies": {
+    "antd": "^3.21.4"
   }
 }
