--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dva": "^2.4.1",
+    "express": "^4.17.1",
     "umi": "^2.8.18",
     "umi-plugin-react": "^1.9.17"
   },
   "dependencies": {
-    "antd": "^3.21.4"
+    "antd": "^3.21.4",
+    "axios": "^0.19.0",
+    "uuid": "^3.3.2"
   }
 }
