--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "umi-plugin-react": "^1.9.17"
   },
   "dependencies": {
+    "@antv/g2": "^3.5.8-beta.1",
     "antd": "^3.21.4",
     "axios": "^0.19.0",
     "uuid": "^3.3.2"
